# claude-axum-backend

./: .coveragerc  .env.cloudrun.neon  .env.production.example  .env.staging  .gcloudignore  .gitignore  CLOUD_RUN_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_BEST_PRACTICES.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.production  FORMATTING_FIX_SUMMARY.md  GITHUB_ACTIONS_FIXED.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_WARNINGS.md  GITHUB_AUTH_FIX.md  GOOGLE_SECRET_MANAGER_GUIDE.md  HOW_TO_DEPLOY.md  IMMEDIATE_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  QUICK_DEPLOY.md  README.md  SECRETS_SETUP_GUIDE.md  TESTING.md  build.rs  cloudbuild.yaml  compose.yaml  deploy-cloudrun-neon.sh  neon-migrate.sh  service.yaml  sqlx-data.json
.sqlx/: query-0afa9bb2265d48e8eeb5c8f8b78026b5980739b00b12ed4d6924089aa51ead85.json  query-1237e0b696c81fc886c7bdc143ba3f423126516263c8b0f65b35cce9fe148d9b.json  query-16ac60096af67adf2a324af5fa0bc85ea87e480bc63726b884659352f2228f00.json  query-1a34b3f8a1129a805c21d44acbe86c807353fad9bc068edd14ad6f57643a7300.json  query-2114e06cf634400c0d8afc2d90489299cdb80e2182681d1298862f91a2528e50.json  query-22e86c6496ed030311bc28f898c4c7679802fa2fa669ff08c12a94cfb93797d2.json  query-33babf6d01ec1c2c1d567b4d81b97e3e8805bb4109d9213401e12fbdb47ed7e9.json  query-3475cbfcbf999eb8950acbe4c2b10326709a9f563e19204b6c42cdec96b71b1a.json  query-38ad91d5d59d1d53dcdceb22a7cab5df77061c5cf3de523ef59e15540b6e0bf6.json  query-53f879685469a275ac0a3692013ad1fde2d44eb9db48f509cce0c2324cf578c0.json  query-5451e28526b2439591f1aaf281f3453779bdc4ef6570cf4c8851ea162f747ae0.json  query-5706d30a4d9efb7618fd2ba8a432c5476c97026a6b381ef8d2c9c4daa57cb2d8.json  query-59fd80625a1c537141234616149046262a5ec38b97d70522b55bf4a826faccbc.json  query-5c50ccccf25103ae86b63e80ff8302ca13a84d404fd74116098e9cccedc5b5fc.json  query-5d901588f52d04e30e97ca7fe44772e0c41459ee88c61fd565bbdb0447fb9f29.json  query-5e56f7c3254f9d470e059978e13090fe2092d2d6078ec786737135cc1d433db4.json  query-6574250165351b5d21812f3800e86fcf3b2633e029ed7fb2189f2e5cd34961d5.json  query-6f05ee82bda80d46b56bca0bed7fbc58e57dd3a3cf37279dcf5e5828dead7ec1.json  query-75225a72c06d1e0e1e288f7d6212d1c5b4a1a9de1201db7cd49a80265f683832.json  (+15 more)
(+62 files in other folders)
