[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "todo_api"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

# Production optimizations
[profile.release]
opt-level = 3
debug = false
panic = "abort"
codegen-units = 1
lto = true
strip = true

# Development optimizations
[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
# Official Google Cloud Secret Manager SDK
google-cloud-secretmanager-v1 = "0.5.0"
# Fallback for local development
dotenvy = "0.15.7"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.8.4"
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
argonautica = "0.2.0"
axum-macros = "0.4.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "compression-gzip",
    "timeout",
    "limit",
] }
regex = "1.10"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
base64 = "0.22.1"

[dev-dependencies]
# Test framework
tokio-test = "0.4"
# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json"] }
# Async testing utilities
tower-test = "0.4"
tower = { version = "0.4", features = ["util"] }
# Test database utilities
testcontainers = { version = "0.20", features = ["blocking"] }
testcontainers-modules = { version = "0.8", features = ["postgres"] }
# Assertion utilities
assert_matches = "1.5"
serial_test = "3.1"
# Mock utilities
mockall = "0.12"
# Property-based testing
proptest = "1.4"
# Coverage and performance
criterion = { version = "0.5", features = ["html_reports"] }
# Fixture and helper utilities
fake = { version = "2.9", features = ["derive", "chrono"] }
serde_json = "1.0"
# Environment variables for tests
temp-env = "0.3"
